package com.survivalcoding;

public class IntangibleAsset extends Asset {
    public IntangibleAsset(String name, int price) {
        super(name, price);
    }
}
